gcc/testsuite/rust/rustc/ui/parser/issues/issue-107705_dg.rs
//@ compile-flags: -C debug-assertions

fn f() {a(b:&, // { dg-error "" "" { target *-*-* } }

